src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__insert__relationship_external_multiple.snap
---
source: src/builder/tests/inserts/insert.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert" AS (
  INSERT INTO
    "public"."peoples" ("first-name", "last-name")
  VALUES
    ($0, $1) RETURNING *
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_insert"."id" :: TEXT AS "id",
    $2 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $3,
      "cte_peoples_insert"."age",
      $4,
      "cte_peoples_insert"."first-name",
      $5,
      "cte_peoples_insert"."gender",
      $6,
      "cte_peoples_insert"."last-name",
      $7,
      "cte_peoples_insert"."twitter"
    ) AS "data"
  FROM
    "cte_peoples_insert"
),
"cte_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    $8 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."favorite_color"
  WHERE
    "public"."favorite_color"."id" IN (
      SELECT
        "cte_peoples_insert"."favorite_color"
      FROM
        "cte_peoples_insert"
    )
),
"cte_rel_articles_id" AS (
  VALUES
    ($9 :: uuid),
    ($10 :: uuid)
),
"cte_rel_articles_insert" AS (
  INSERT INTO
    "public"."people-article" ("article_id", "people_id")
  SELECT
    "cte_peoples_data"."id" AS "article_id",
    "cte_rel_articles_id"."id" AS "people_id"
  FROM
    "cte_peoples_data",
    "cte_rel_articles_id" RETURNING "public"."people-article"."id",
    "public"."people-article"."article_id",
    "public"."people-article"."people_id"
),
"cte_rel_articles_rel_data" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    $11 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."people-article"."article_id" AS "rel_article_id",
    "public"."people-article"."people_id" AS "rel_people_id"
  FROM
    "public"."people-article"
    INNER JOIN "cte_peoples_data" ON "public"."people-article"."people_id" = "cte_peoples_data"."id"
),
"cte_rel_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    $12 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."articles"
  WHERE
    "public"."articles"."id" IN (
      SELECT
        "cte_rel_articles_rel_data"."article_id"
      FROM
        "cte_rel_articles_rel_data"
    )
)
SELECT
  "cte_rel_articles_data"."id",
  "cte_rel_articles_data"."type",
  "cte_rel_articles_data"."data"
FROM
  "cte_rel_articles_data"
UNION
ALL
SELECT
  "cte_favorite_color_data"."id",
  "cte_favorite_color_data"."type",
  "cte_favorite_color_data"."data"
FROM
  "cte_favorite_color_data"
UNION
ALL
SELECT
  "cte_rel_articles_rel_data"."id",
  "cte_rel_articles_rel_data"."type",
  "cte_rel_articles_rel_data"."data"
FROM
  "cte_rel_articles_rel_data"
UNION
ALL
SELECT
  "cte_peoples_data"."id",
  "cte_peoples_data"."type",
  "cte_peoples_data"."data"
FROM
  "cte_peoples_data";
