src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__insert__relationship_external_multiple_include_rel.snap
---
source: src/builder/tests/inserts/insert.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert" AS (
  INSERT INTO
    "public"."peoples" ("first-name", "last-name")
  VALUES
    ($1, $2) RETURNING *
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_insert"."id" :: TEXT AS "id",
    "cte_peoples_insert"."id" AS "main_id",
    $3 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $4,
      "cte_peoples_insert"."age",
      $5,
      "cte_peoples_insert"."first-name",
      $6,
      "cte_peoples_insert"."gender",
      $7,
      "cte_peoples_insert"."last-name",
      $8,
      "cte_peoples_insert"."twitter"
    ) AS "data",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    "cte_peoples_insert"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_insert"
),
"cte_rel_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    "public"."favorite_color"."id" AS "main_id",
    $9 :: TEXT AS "type",
    JSON_BUILD_OBJECT($10, "public"."favorite_color"."color") AS "data",
    "cte_peoples_data"."id" :: TEXT AS "related_id",
    $11 :: TEXT AS "related_type"
  FROM
    "public"."favorite_color"
    INNER JOIN "cte_peoples_data" ON "public"."favorite_color"."id" = "cte_peoples_data"."rel_favorite_color"
),
"cte_rel_articles_id" AS (
  VALUES
    ($12 :: UUID),
    ($13 :: UUID)
),
"cte_rel_articles_insert" AS (
  INSERT INTO
    "public"."people-article" ("article_id", "people_id")
  SELECT
    "cte_peoples_data"."id" AS "article_id",
    "cte_rel_articles_id"."id" AS "people_id"
  FROM
    "cte_peoples_data",
    "cte_rel_articles_id" RETURNING "public"."people-article"."id",
    "public"."people-article"."article_id",
    "public"."people-article"."people_id"
),
"cte_rel_people-article_rel_data" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    "public"."people-article"."article_id" AS "rel_article_id",
    "public"."people-article"."people_id" AS "rel_people_id"
  FROM
    "public"."people-article"
    INNER JOIN "cte_peoples_data" ON "public"."people-article"."people_id" :: TEXT = "cte_peoples_data"."id" :: TEXT
),
"cte_rel_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    "public"."articles"."id" AS "main_id",
    $14 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $15,
      "public"."articles"."body",
      $16,
      "public"."articles"."title"
    ) AS "data",
    "cte_rel_people-article_rel_data"."rel_people_id" :: TEXT AS "related_id",
    $17 :: TEXT AS "related_type"
  FROM
    "public"."articles"
    INNER JOIN "cte_rel_people-article_rel_data" ON "cte_rel_people-article_rel_data"."rel_article_id" :: TEXT = "public"."articles"."id" :: TEXT
) (
  SELECT
    "cte_rel_articles_data"."id",
    "cte_rel_articles_data"."type",
    "cte_rel_articles_data"."data",
    "cte_rel_articles_data"."related_type",
    "cte_rel_articles_data"."related_id"
  FROM
    "cte_rel_articles_data"
)
UNION
ALL (
  SELECT
    "cte_rel_favorite_color_data"."id",
    "cte_rel_favorite_color_data"."type",
    "cte_rel_favorite_color_data"."data",
    "cte_rel_favorite_color_data"."related_type",
    "cte_rel_favorite_color_data"."related_id"
  FROM
    "cte_rel_favorite_color_data"
)
UNION
ALL (
  SELECT
    "cte_peoples_data"."id",
    "cte_peoples_data"."type",
    "cte_peoples_data"."data",
    "cte_peoples_data"."related_type",
    "cte_peoples_data"."related_id"
  FROM
    "cte_peoples_data"
);
