src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__insert__relationship_internal_single.snap
---
source: src/builder/tests/inserts/insert.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert" AS (
  INSERT INTO
    "public"."peoples" ("first-name", "last-name", "favorite_color")
  VALUES
    ($1, $2, $3) RETURNING *
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_insert"."id" :: TEXT AS "id",
    $4 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $5,
      "cte_peoples_insert"."age",
      $6,
      "cte_peoples_insert"."first-name",
      $7,
      "cte_peoples_insert"."gender",
      $8,
      "cte_peoples_insert"."last-name",
      $9,
      "cte_peoples_insert"."twitter"
    ) AS "data",
    "cte_peoples_insert"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_insert"
) (
  SELECT
    "cte_peoples_data"."id",
    "cte_peoples_data"."type",
    "cte_peoples_data"."data"
  FROM
    "cte_peoples_data"
);
