src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__insert__relationship_internal_single_include.snap
---
source: src/builder/tests/inserts/insert.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert" AS (
  INSERT INTO
    "public"."peoples" ("first-name", "last-name", "favorite_color")
  VALUES
    ($0, $1, $2) RETURNING *
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_insert"."id" :: TEXT AS "id",
    $3 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $4,
      "cte_peoples_insert"."age",
      $5,
      "cte_peoples_insert"."first-name",
      $6,
      "cte_peoples_insert"."gender",
      $7,
      "cte_peoples_insert"."last-name",
      $8,
      "cte_peoples_insert"."twitter"
    ) AS "data"
  FROM
    "cte_peoples_insert"
),
"cte_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    $9 :: TEXT AS "type",
    JSON_BUILD_OBJECT($10, "public"."favorite_color"."color") AS "data"
  FROM
    "public"."favorite_color"
  WHERE
    "public"."favorite_color"."id" IN (
      SELECT
        "cte_peoples_insert"."favorite_color"
      FROM
        "cte_peoples_insert"
    )
),
"cte_rel_articles_rel_data" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    $11 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."people-article"."article_id" AS "sort_article_id",
    "public"."people-article"."people_id" AS "sort_people_id"
  FROM
    "public"."people-article"
  WHERE
    "public"."people-article"."people_id" = "cte_peoples_data"."id"
),
"cte_rel_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    $12 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."articles"
  WHERE
    "public"."articles"."id" IN (
      SELECT
        "cte_rel_articles_rel_data"."article_id"
      FROM
        "cte_rel_articles_rel_data"
    )
)
SELECT
  "cte_rel_articles_data"."id",
  "cte_rel_articles_data"."type",
  "cte_rel_articles_data"."data"
FROM
  "cte_rel_articles_data"
UNION
ALL
SELECT
  "cte_favorite_color_data"."id",
  "cte_favorite_color_data"."type",
  "cte_favorite_color_data"."data"
FROM
  "cte_favorite_color_data"
UNION
ALL
SELECT
  "cte_rel_articles_rel_data"."id",
  "cte_rel_articles_rel_data"."type",
  "cte_rel_articles_rel_data"."data"
FROM
  "cte_rel_articles_rel_data"
UNION
ALL
SELECT
  "cte_peoples_data"."id",
  "cte_peoples_data"."type",
  "cte_peoples_data"."data"
FROM
  "cte_peoples_data";
